--- a/style.css
+++ b/style.css
@@ -1,7 +1,77 @@
 *{
-  background-color: rgb(98, 102, 102);
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 html,body{
     width: 100%;
     height: 100%;
 }
+
+#main{
+  width: 100%;
+  height: 100%;
+}
+
+#header{
+  width: 100%;
+  height: 13vh;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  background-color: white;
+}
+
+#logo{
+  margin: 35px;
+  height: 50%;
+}
+
+#logo img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.texts{
+  margin: 20px;
+  color: rgb(11, 11, 91);
+  font-weight: 540;
+  font-size: large;
+
+}
+
+#contact{
+  margin-left: 12rem;
+  font-weight: lighter;
+}
+
+#fakeheader{
+  width: 100%;
+  height: 13vh;
+}
+
+#page1{
+  width: 100%;
+  height: 87vh;
+  background-color: salmon;
+}
+
+#page2{
+  width: 100%;
+  height: 90vh;
+  background-color: rgb(236, 166, 158);
+}
+
+#page3{
+  width: 100%;
+  height: 90vh;
+  background-color: greenyellow;
+}
+
+
+
+
+
