--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html,body{
 #page1{
   width: 100%;
   height: 87vh;
-  background-color: salmon;
+  background-color: rgb(185, 123, 116);
 }
 
 #page2{
@@ -68,7 +68,7 @@ html,body{
 #page3{
   width: 100%;
   height: 90vh;
-  background-color: greenyellow;
+  background-color: rgb(202, 87, 87);
 }
 
 
