--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ video{
   overflow: hidden;
   object-fit: cover;
   margin-top: 2.5rem;
-  border: solid black 1px;
 }
 
 #heading{
@@ -207,7 +206,7 @@ video{
 #page2{
   width: 100%;
   height: 90vh;
-  background-color: rgb(236, 166, 158);
+  background-color: white;
 }
 
 #page3{
