--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ html, body {
 }
 
 #logo {
-  height: 60%;
+  height: 70%;
+  margin-right: 13px;
 }
 
 #logo img {
@@ -79,7 +80,7 @@ html, body {
 }
 
 .icon:hover, #dark:hover, #login:hover {
-  background-color: lightblue;
+  background-color: rgb(182, 222, 235);
 }
 
 /* Dark Mode Toggle */
@@ -177,6 +178,10 @@ html, body {
 #box1 {
   width: 47%;
   height: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 #box2 {
@@ -189,8 +194,8 @@ html, body {
 }
 
 video {
-  width: 90%;
-  height: 85%;
+  width: 85%;
+  height: 80%;
   border-radius: 30px;
   object-fit: cover; /* Ensures the video covers the box completely without distortion */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -218,9 +223,24 @@ video:hover {
 /* Additional Pages */
 #page2 {
   width: 100%;
-  height: 90vh;
+  height: 70vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
 }
 
+.box{
+  width: 300px;
+  height: 400px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border: solid black;
+  border-radius: 50%;
+}
 /* Footer */
 #footer {
   width: 100%;
