--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ video:hover {
   justify-content: space-around;
   align-items: center;
   padding: 10px;
+  background-color: white;
 }
 
 .box{
