--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ video:hover {
 /* Additional Pages */
 #page2 {
   width: 100%;
-  height: 70vh;
+  height: 65vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -232,16 +232,25 @@ video:hover {
 }
 
 .box{
-  width: 300px;
-  height: 400px;
-  margin: 5px;
-  display: flex;
-  align-items: center;
+  width: 310px;
+  height: 350px;
+  margin: 10px;
   justify-content: center;
   overflow: hidden;
   border: solid black;
-  border-radius: 20%;
+  border-radius: 30px;
   background-color: rgb(1,49,76);
+  color: white;
+}
+
+h3{
+  margin: 20px;
+  text-align: center;
+}
+
+h4{
+  padding: 10px;
+
 }
 /* Footer */
 #footer {
